--- a/AzureBattleground.Web/styles/app.css
+++ b/AzureBattleground.Web/styles/app.css
@@ -1,3 +1,63 @@
+.color-primary-0 { color: #54C7FF }	/* Main Primary color */
+.color-primary-1 { color: #B0E5FF }
+.color-primary-2 { color: #7DD5FF }
+.color-primary-3 { color: #2AB9FF }
+.color-primary-4 { color: #09ACFB }
+
+.color-secondary-1-0 { color: #FFCD4B }	/* Main Secondary color (1) */
+.color-secondary-1-1 { color: #FFE8AC }
+.color-secondary-1-2 { color: #FFD977 }
+.color-secondary-1-3 { color: #FFC11F }
+.color-secondary-1-4 { color: #FFB800 }
+
+.color-secondary-2-0 { color: #FF714B }	/* Main Secondary color (2) */
+.color-secondary-2-1 { color: #FFBDAC }
+.color-secondary-2-2 { color: #FF9377 }
+.color-secondary-2-3 { color: #FF4D1F }
+.color-secondary-2-4 { color: #FF3500 }
+
 .ui.image.help-image img {
     display: inline;
+}
+
+.main-container {
+    margin-top: 47px;
+}
+
+.home-mainSegment {
+    padding: 0em;
+    color: #fff;
+
+    background: linear-gradient(271deg, #0C5C82, #09ACFB) !important;
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 2s ease infinite;
+    -moz-animation: AnimationName 2s ease infinite;
+    -o-animation: AnimationName 2s ease infinite;
+    animation: AnimationName 2s ease infinite;
+
+    @-webkit-keyframes AnimationName {
+        0%{background-position:0% 52%}
+        50%{background-position:100% 49%}
+        100%{background-position:0% 52%}
+    }
+    @-moz-keyframes AnimationName {
+        0%{background-position:0% 52%}
+        50%{background-position:100% 49%}
+        100%{background-position:0% 52%}
+    }
+    @-o-keyframes AnimationName {
+        0%{background-position:0% 52%}
+        50%{background-position:100% 49%}
+        100%{background-position:0% 52%}
+    }
+    @keyframes AnimationName {
+        0%{background-position:0% 52%}
+        50%{background-position:100% 49%}
+        100%{background-position:0% 52%}
+    }
+}
+
+.home-mainSegment .ui.header {
+    color: #fff;
 }
