Home page layout

--- a/AzureBattleground.Web/styles/app.css
+++ b/AzureBattleground.Web/styles/app.css
@@ -61,3 +61,7 @@
 .home-mainSegment .ui.header {
     color: #fff;
 }
+
+.mainMenu-exercisesMenu .item a {
+    color: rgba(0,0,0,.87) !important;
+} 
