New exercise, more routing changes

--- a/AzureBattleground.Web/styles/app.css
+++ b/AzureBattleground.Web/styles/app.css
@@ -74,3 +74,7 @@ pre {
     background-color: ghostwhite;
     padding: 1em;
 }
+
+.ui.list .list>.item>.content>.list, .ui.list>.item>.content>.list {
+    margin-left: 1em;
+}
